--- a/index.html
+++ b/index.html
@@ -14,7 +14,37 @@
   </head>
   <body>
     <div class="container">
-      <h1>hello world</h1>
+      <div class="weatherapp">
+        <h1>Gaborone</h1>
+        <ul>
+          <li>Wednesday 23:05</li>
+          <li>clear sky</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+              alt="clear sky"
+            />
+            29℃|℉
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>humidity: 20%</li>
+              <li>wind: 2km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <a
+          href="https://github.com/MaduoNtshoto/vanilla-weather-app.git"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Maduo Ntshoto
+      </footer>
     </div>
     <script src="src/app.js"></script>
   </body>
