--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather Application</title>
   </head>
   <body>
     <div class="container">
       <div class="weatherapp">
-        <h1>Gaborone</h1>
-        <ul>
-          <li>Wednesday 23:05</li>
-          <li>clear sky</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-              alt="clear sky"
-            />
-            29℃|℉
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitation: 0%</li>
-              <li>humidity: 20%</li>
-              <li>wind: 2km/h</li>
-            </ul>
+        <div class="overview">
+          <h1>Gaborone</h1>
+          <ul>
+            <li>Wednesday 23:05</li>
+            <li>clear sky</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+                  alt="clear sky"
+                  id="icon"
+                />
+                <div>
+                  <strong id="temperature">29</strong
+                  ><span class="units"> ℃|℉ </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>humidity: 20%</li>
+                <li>wind: 2km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
