Updated the temperature section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 />
                 <div>
                   <strong id="temperature">29</strong
-                  ><span class="units"> ℃|℉ </span>
+                  ><span class="units"
+                    ><a href="#">℃</a>|<a href="#">℉</a>
+                  </span>
                 </div>
               </div>
             </div>
