--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather Application</title>
   </head>
   <body>
     <div class="container">
       <div class="weatherapp">
         <div class="overview">
-          <h1>Gaborone</h1>
+          <h1 id="city">Gaborone</h1>
           <ul>
-            <li>Wednesday 23:05</li>
-            <li>clear sky</li>
+            <li>Last updated at <span id="date"></span></li>
+            <li id="description">clear sky</li>
           </ul>
           <div class="row">
             <div class="col-6">
@@ -40,8 +41,8 @@
             <div class="col-6">
               <ul>
                 <li>Precipitation: 0%</li>
-                <li>humidity: 20%</li>
-                <li>wind: 2km/h</li>
+                <li>humidity:<span id="humidity"></span></li>
+                <li>wind:<span id="wind"></span></li>
               </ul>
             </div>
           </div>
