--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="overview">
           <h1 id="city">Gaborone</h1>
           <ul>
-            <li>Last updated at <span id="date"></span></li>
+            <li id="days"><span id="date"></span></li>
             <li id="description">clear sky</li>
           </ul>
           <div class="row">
