Updated the Icon element fetching from openweather.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-                  alt="clear sky"
-                  id="icon"
-                />
+                <img src="" alt="" id="icon" />
                 <div>
                   <strong id="temperature">29</strong
                   ><span class="units"
@@ -41,8 +37,8 @@
             <div class="col-6">
               <ul>
                 <li>Precipitation: 0%</li>
-                <li>humidity:<span id="humidity"></span></li>
-                <li>wind:<span id="wind"></span></li>
+                <li>humidity:<span id="humidity"></span>%</li>
+                <li>wind:<span id="wind"></span>Km/h</li>
               </ul>
             </div>
           </div>
