--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
   <body>
     <div class="container">
       <div class="weatherapp">
+        <form id="search-form" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input
+                type="search"
+                placeholder="Type city"
+                class="form-control"
+                id="city-input"
+                autocomplete="off"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="search"
+                class="btn btn-primary w-100"
+              />
+            </div>
+          </div>
+        </form>
         <div class="overview">
           <h1 id="city">Gaborone</h1>
           <ul>
@@ -28,9 +48,7 @@
                 <img src="" alt="" id="icon" />
                 <div>
                   <strong id="temperature">29</strong
-                  ><span class="units"
-                    ><a href="#">℃</a>|<a href="#">℉</a>
-                  </span>
+                  ><span class="units">℃|<a href="#">℉</a> </span>
                 </div>
               </div>
             </div>
